<resources>
    <string name="app_name">Coffeefinder</string>
    <string name="app_description">Find good coffee wherever you are!\n
        You are welcome to contribute by \n
        adding your favorite coffee places, \n
        so that other users can find them.</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_up_question">Don\'t have an account yet?</string>
    <string name="sign_up_prompt">Sign up here</string>
    <string name="continue_as_guest_text">or continue as guest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="thanks_for_signing_up">"Thank you for signing up!\n
        Just fill in the fields below and click \'submit\'."</string>
    <string name="email_hint">"Email"</string>
    <string name="password_hint">"Password"</string>
    <string name="submit_button">"Submit"</string>
    <string name="sign_up_success">"Sign up successful!"</string>
    <string name="error_message">"An error occurred.\nPlease try again."</string>
    <string name="sign_in_welcome_back">Welcome back! Sign in\n
    with your email and password below.</string>
    <string name="sign_in_success">Sign in successful!</string>
    <string name="add_coffee_place_button">Add coffee place</string>
    <string name="back_button">Done. Take me back!</string>
    <string name="add_button">Add</string>
    <string name="name_field_hint">Name, e.g. Sosta Bar</string>
    <string name="location_field_hint">Location, e.g. Rome, Italy</string>
    <string name="address_field_hint">Address, e.g. street name</string>
    <string name="comment_field_hint">Comment, e.g. \"So good\"</string>
    <string name="add_item_welcome">Here you can add your favorite coffee\nshops! Fill in the fields below (try to\nmake it short), and your contribution\nwill be added to the database for all\nusers to enjoy.</string>
    <string name="not_logged_in_error">You need to be signed in before \nyou can make a contribution!</string>
    <string name="fields_not_filled_error">You have to fill in the fields\nbefore you click \'add\'.</string>
    <string name="add_success">Thank you!\nYour coffee place was successfully added.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_button">View on map</string>
    <string name="latitude_field">Latitude, format 0.0</string>
    <string name="lng_field">Longitude, format 0.0</string>
    <string name="missing_string_error">Error: string missing in database,\ncan not create marker</string>
    <string name="simple_back_button">Back</string>


</resources>